wdl-analysis/tests/validation/exponentiation-unsupported.errors
warning[UnusedDeclaration]: unused declaration `x`
  ┌─ tests/validation/exponentiation-unsupported:5:9
  │
5 │     Int x = 10 ** 10
  │         ^

error: use of the exponentiation operator requires WDL version 1.2
  ┌─ tests/validation/exponentiation-unsupported:5:16
  │
5 │     Int x = 10 ** 10
  │                ^^

